# ita_challenge_data_2021

./: data_cleaning.py  data_cleaning_1.py  pyproject.toml  submission1.csv
