[tool.poetry]
name = "ita_data_challenge"
version = "0.1.0"
description = ""
authors = ["LLatyki <lucaslatyki@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.3"
scikit-learn = "^0.24.1"
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
